--- a/MIXEDEMOTIONS/css/base.css
+++ b/MIXEDEMOTIONS/css/base.css
@@ -84,6 +84,10 @@ button {
 	overflow: scroll;
 }
 
+#content2a {
+	padding-bottom: 3vw;
+}
+
 .content > *:not(.question) {
 	margin-left: 8vw;
 	margin-right: 8vw;
