--- a/MIXEDEMOTIONS/css/base.css
+++ b/MIXEDEMOTIONS/css/base.css
@@ -165,6 +165,13 @@ button {
 	width: 35vw;
 }
 
+#introaudiocontainer {
+	display: none;
+	opacity: 0;
+	transition: opacity 1s;
+	-webkit-transition: opacity 1s;
+}
+
 /* .playpausebtn {
 	width: 5vw;
 	cursor: pointer;
@@ -250,7 +257,7 @@ button {
 	#content2a {
 		padding-bottom: 16vw;
 	}
-	
+
 	#button3b {
 		margin-bottom: 13vw;
 	}
